--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,29 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Volkhov:wght@400;700&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.volk {
+  font-family: "Volkhov", serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.poppins {
+  font-family: "Poppins", sans-serif;
 }
 
-* {
-  box-sizing: border-box;
+.wrapper {
+  @apply max-w-[1170px] w-full mx-auto;
+}
+
+.sign-shadow {
+  box-shadow: 0px 8px 16px rgba(250, 116, 54, 0.24);
+}
+
+label {
+  @apply poppins text-xs text-third;
+}
+
+.explore-card {
+  box-shadow: 0px 2px 80px 2px rgba(0, 0, 0, 0.06);
 }
